tenants/xonery/tenant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: xonery-tenant
  labels:
    toolkit.fluxcd.io/tenant: xonery
