tenants/xonery/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xonery
  namespace: xonery
spec:
  parentRefs:
    - name: infrastructure
      namespace: cilium-system
  hostnames:
    - "xonery.devops.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo
          port: 9898
